--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -824,6 +824,10 @@ video {
   height: 100vh;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .w-1\/5 {
   width: 20%;
 }
@@ -947,6 +951,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .min-w-\[180px\] {
