--- a/client/src/components/Corredores/Dashboard/CorredoresDashboard.module.css
+++ b/client/src/components/Corredores/Dashboard/CorredoresDashboard.module.css
@@ -161,6 +161,11 @@
   border-radius: 5px;
 }
 
+@media screen and (max-width: 1500px) {
+  .tableRow {
+    grid-template-columns: 12.5% 19.5% 11% 27% 17% auto;
+  }
+}
 .progres {
   width: 700px;
   margin-left: 240px;
