--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -840,10 +840,6 @@ video {
   width: 83.333333%;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
-}
-
 .w-12 {
   width: 3rem;
 }
@@ -870,6 +866,10 @@ video {
 
 .w-4 {
   width: 1rem;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
 }
 
 .w-4\/5 {
@@ -1184,6 +1184,16 @@ video {
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#4f4f62\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 79 98 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#575659\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(87 86 89 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#6254ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(98 84 255 / var(--tw-bg-opacity));
@@ -1324,6 +1334,11 @@ video {
   padding: 2rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1450,10 +1465,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .font-medium {
