--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -691,6 +691,10 @@ video {
   margin-left: 1.25rem;
 }
 
+.ml-\[350px\] {
+  margin-left: 350px;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -1268,11 +1272,6 @@ video {
   background-color: rgb(168 85 247 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-slate-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
@@ -1285,21 +1284,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-blue-400 {
@@ -1491,6 +1475,10 @@ video {
 
 .text-\[35px\] {
   font-size: 35px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
 }
 
 .font-bold {
