--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -844,6 +844,10 @@ video {
   width: 83.333333%;
 }
 
+.w-11\/12 {
+  width: 91.666667%;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -870,10 +874,6 @@ video {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-4\/12 {
-  width: 33.333333%;
 }
 
 .w-4\/5 {
@@ -955,6 +955,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
 }
 
 .w-80 {
@@ -1196,16 +1200,6 @@ video {
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#4f4f62\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 79 98 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#575659\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(87 86 89 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#6254ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(98 84 255 / var(--tw-bg-opacity));
@@ -1294,6 +1288,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#818088\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 128 136 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#575659\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(87 86 89 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#4f4f62\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 79 98 / var(--tw-bg-opacity));
+}
+
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
@@ -1361,11 +1370,6 @@ video {
   padding: 2rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1404,6 +1408,11 @@ video {
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .pb-1 {
@@ -1490,12 +1499,24 @@ video {
   font-size: 35px;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
+}
+
 .text-\[14px\] {
   font-size: 14px;
 }
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
