--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -588,6 +588,10 @@ video {
   left: 0px;
 }
 
+.left-\[40\%\] {
+  left: 40%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -685,6 +689,10 @@ video {
 
 .ml-5 {
   margin-left: 1.25rem;
+}
+
+.ml-\[350px\] {
+  margin-left: 350px;
 }
 
 .mr-2 {
@@ -836,6 +844,10 @@ video {
   width: 83.333333%;
 }
 
+.w-11\/12 {
+  width: 91.666667%;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -862,10 +874,6 @@ video {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-4\/12 {
-  width: 33.333333%;
 }
 
 .w-4\/5 {
@@ -908,10 +916,6 @@ video {
   width: 2rem;
 }
 
-.w-80 {
-  width: 20rem;
-}
-
 .w-9 {
   width: 2.25rem;
 }
@@ -940,10 +944,6 @@ video {
   width: 40px;
 }
 
-.w-\[500px\] {
-  width: 500px;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -955,6 +955,18 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[500px\] {
+  width: 500px;
 }
 
 .min-w-\[180px\] {
@@ -1188,11 +1200,6 @@ video {
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#4f4f62\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 79 98 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#6254ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(98 84 255 / var(--tw-bg-opacity));
@@ -1206,11 +1213,6 @@ video {
 .bg-\[\#8d8b0c\] {
   --tw-bg-opacity: 1;
   background-color: rgb(141 139 12 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#a9b231\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(169 178 49 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#ac4242\] {
@@ -1247,11 +1249,6 @@ video {
   background-color: rgb(255 105 180 / var(--tw-bg-opacity));
 }
 
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1272,11 +1269,6 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
 .bg-purple-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(168 85 247 / var(--tw-bg-opacity));
@@ -1294,6 +1286,36 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#818088\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 128 136 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#575659\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(87 86 89 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#4f4f62\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 79 98 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#a9b231\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(169 178 49 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1348,11 +1370,6 @@ video {
   padding: 2rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1391,6 +1408,11 @@ video {
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .pb-1 {
@@ -1461,10 +1483,6 @@ video {
   font-size: 1.5rem;
 }
 
-.text-\[14px\] {
-  font-size: 14px;
-}
-
 .text-\[18px\] {
   font-size: 18px;
 }
@@ -1481,8 +1499,24 @@ video {
   font-size: 35px;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
