--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1247,6 +1247,11 @@ video {
   background-color: rgb(255 105 180 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
