--- a/client/src/components/Lideres/Analytic/AnalyticLeader.module.css
+++ b/client/src/components/Lideres/Analytic/AnalyticLeader.module.css
@@ -2,6 +2,7 @@
   font-weight: 600;
   color: rgb(202, 202, 202);
   font-size: 20px;
+  width: 100px;
 }
 .buttonAdd {
   background-color: #4f4de7;
