--- a/client/src/components/Lideres/incidences/incidencias.module.css
+++ b/client/src/components/Lideres/incidences/incidencias.module.css
@@ -2,6 +2,7 @@
   font-weight: 600;
   color: rgb(202, 202, 202);
   font-size: 20px;
+  width: 100px;
 }
 .buttonAdd {
   background-color: #4f4de7;
@@ -59,7 +60,6 @@
   text-overflow: ellipsis;
 }
 
-
 .ig {
   color: #ff598b;
   font-size: 25px;
@@ -72,7 +72,6 @@
   width: 25px;
   text-overflow: ellipsis;
 }
-
 
 @media screen and (max-width: 1500px) {
   .tableRow {
