--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -982,6 +982,30 @@ video {
   width: 100vw;
 }
 
+.w-\[13\%\] {
+  width: 13%;
+}
+
+.w-\[7\%\] {
+  width: 7%;
+}
+
+.w-\[11\%\] {
+  width: 11%;
+}
+
+.w-\[9\%\] {
+  width: 9%;
+}
+
+.w-\[16\%\] {
+  width: 16%;
+}
+
+.w-\[17\%\] {
+  width: 17%;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1428,6 +1452,16 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1458,6 +1492,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .text-left {
