--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -580,6 +580,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -614,6 +618,18 @@ video {
 
 .top-4 {
   top: 1rem;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .z-0 {
@@ -1329,11 +1345,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .fill-none {
