--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -994,20 +994,28 @@ video {
   width: 100vw;
 }
 
-.w-\[11\%\] {
-  width: 11%;
-}
-
 .w-\[13\%\] {
   width: 13%;
 }
 
-.w-\[17\%\] {
-  width: 17%;
+.w-\[7\%\] {
+  width: 7%;
+}
+
+.w-\[11\%\] {
+  width: 11%;
 }
 
 .w-\[9\%\] {
   width: 9%;
+}
+
+.w-\[16\%\] {
+  width: 16%;
+}
+
+.w-\[17\%\] {
+  width: 17%;
 }
 
 .min-w-\[180px\] {
@@ -1340,6 +1348,11 @@ video {
   background-color: rgb(168 85 247 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-slate-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
@@ -1352,11 +1365,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1456,6 +1464,16 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1486,6 +1504,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .text-left {
