--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -580,6 +580,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -588,8 +592,16 @@ video {
   left: 0px;
 }
 
+.left-1 {
+  left: 0.25rem;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .right-14 {
@@ -614,18 +626,6 @@ video {
 
 .top-4 {
   top: 1rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.right-1 {
-  right: 0.25rem;
 }
 
 .z-0 {
@@ -909,10 +909,6 @@ video {
   width: 83.333333%;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
 .w-56 {
   width: 14rem;
 }
@@ -949,12 +945,24 @@ video {
   width: 10rem;
 }
 
+.w-\[11\%\] {
+  width: 11%;
+}
+
 .w-\[12rem\] {
   width: 12rem;
 }
 
+.w-\[13\%\] {
+  width: 13%;
+}
+
 .w-\[15\%\] {
   width: 15%;
+}
+
+.w-\[17\%\] {
+  width: 17%;
 }
 
 .w-\[20\%\] {
@@ -981,6 +989,10 @@ video {
   width: 500px;
 }
 
+.w-\[9\%\] {
+  width: 9%;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -992,22 +1004,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[11\%\] {
-  width: 11%;
-}
-
-.w-\[13\%\] {
-  width: 13%;
-}
-
-.w-\[17\%\] {
-  width: 17%;
-}
-
-.w-\[9\%\] {
-  width: 9%;
 }
 
 .min-w-\[180px\] {
@@ -1340,6 +1336,11 @@ video {
   background-color: rgb(168 85 247 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-slate-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
@@ -1352,11 +1353,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1544,6 +1540,10 @@ video {
   font-size: 35px;
 }
 
+.text-\[1\.6rem\] {
+  font-size: 1.6rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1670,6 +1670,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#a89e3c\] {
+  --tw-text-opacity: 1;
+  color: rgb(168 158 60 / var(--tw-text-opacity));
+}
+
+.text-\[\#4da342\] {
+  --tw-text-opacity: 1;
+  color: rgb(77 163 66 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
