--- a/client/src/components/Corredores/Dashboard/CorredoresDashboard.module.css
+++ b/client/src/components/Corredores/Dashboard/CorredoresDashboard.module.css
@@ -40,6 +40,17 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+.buttonNivelActiveIncidence {
+  background-color: #a89e3c;
+  color: #39394b;
+  border-radius: 10px;
+  padding: 5px 12px;
+  font-size: 18px;
+  margin-left: 10px;
+  font-weight: 700;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 .table {
   /* border: 1px solid violet; */
   position: relative;
