--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -580,6 +580,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -588,8 +592,16 @@ video {
   left: 0px;
 }
 
+.left-1 {
+  left: 0.25rem;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .right-14 {
@@ -616,20 +628,12 @@ video {
   top: 1rem;
 }
 
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
 .z-0 {
   z-index: 0;
+}
+
+.-z-50 {
+  z-index: -50;
 }
 
 .m-1 {
@@ -909,10 +913,6 @@ video {
   width: 83.333333%;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
 .w-56 {
   width: 14rem;
 }
@@ -949,12 +949,24 @@ video {
   width: 10rem;
 }
 
+.w-\[11\%\] {
+  width: 11%;
+}
+
 .w-\[12rem\] {
   width: 12rem;
 }
 
+.w-\[13\%\] {
+  width: 13%;
+}
+
 .w-\[15\%\] {
   width: 15%;
+}
+
+.w-\[17\%\] {
+  width: 17%;
 }
 
 .w-\[20\%\] {
@@ -981,6 +993,10 @@ video {
   width: 500px;
 }
 
+.w-\[9\%\] {
+  width: 9%;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -992,22 +1008,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[11\%\] {
-  width: 11%;
-}
-
-.w-\[13\%\] {
-  width: 13%;
-}
-
-.w-\[17\%\] {
-  width: 17%;
-}
-
-.w-\[9\%\] {
-  width: 9%;
 }
 
 .min-w-\[180px\] {
@@ -1340,6 +1340,11 @@ video {
   background-color: rgb(168 85 247 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-slate-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
@@ -1354,9 +1359,17 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
+.bg-\[\#ff151551\] {
+  background-color: #ff151551;
+}
+
+.bg-\[\#ff1515f8\] {
+  background-color: #ff1515f8;
+}
+
+.bg-\[\#f22121\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(242 33 33 / var(--tw-bg-opacity));
 }
 
 .fill-none {
