--- a/client/src/components/Corredores/Dashboard/CorredoresDashboard.module.css
+++ b/client/src/components/Corredores/Dashboard/CorredoresDashboard.module.css
@@ -68,13 +68,14 @@
 .tableRow {
   margin-top: 20px;
   display: grid;
-  grid-template-columns: 29% 16% 22% 20% auto;
-  margin-left: 0px;
+  grid-template-columns: 25% 16% 22% 20% auto;
+  margin-left: 4rem;
 }
 
 .tableCards {
   display: grid;
-  grid-template-columns: 23% 4% 15% 16% 1% 1% 1%;
+  /* border: 1px solid violet; */
+  grid-template-columns: 17% 1% 13% 12% 1% 1% 1%;
   align-items: center;
   justify-content: space-between;
   background-color: #39394b;
