--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -580,10 +580,6 @@ video {
   bottom: 0px;
 }
 
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -592,16 +588,8 @@ video {
   left: 0px;
 }
 
-.left-1 {
-  left: 0.25rem;
-}
-
 .right-0 {
   right: 0px;
-}
-
-.right-1 {
-  right: 0.25rem;
 }
 
 .right-14 {
@@ -630,10 +618,6 @@ video {
 
 .z-0 {
   z-index: 0;
-}
-
-.-z-50 {
-  z-index: -50;
 }
 
 .m-1 {
@@ -692,6 +676,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .ml-12 {
   margin-left: 3rem;
 }
@@ -710,6 +698,10 @@ video {
 
 .ml-5 {
   margin-left: 1.25rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
 .mr-2 {
@@ -1276,11 +1268,6 @@ video {
   background-color: rgb(180 33 94 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#b44f82\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(180 79 130 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#b9b9b978\] {
   background-color: #b9b9b978;
 }
@@ -1357,19 +1344,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ff151551\] {
-  background-color: #ff151551;
-}
-
-.bg-\[\#ff1515f8\] {
-  background-color: #ff1515f8;
-}
-
-.bg-\[\#f22121\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 33 33 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1537,6 +1511,10 @@ video {
   font-size: 1.5rem;
 }
 
+.text-\[1\.6rem\] {
+  font-size: 1.6rem;
+}
+
 .text-\[14px\] {
   font-size: 14px;
 }
@@ -1555,10 +1533,6 @@ video {
 
 .text-\[35px\] {
   font-size: 35px;
-}
-
-.text-\[1\.6rem\] {
-  font-size: 1.6rem;
 }
 
 .font-bold {
@@ -1595,9 +1569,19 @@ video {
   color: rgb(65 141 240 / var(--tw-text-opacity));
 }
 
+.text-\[\#4da342\] {
+  --tw-text-opacity: 1;
+  color: rgb(77 163 66 / var(--tw-text-opacity));
+}
+
 .text-\[\#9eabbe\] {
   --tw-text-opacity: 1;
   color: rgb(158 171 190 / var(--tw-text-opacity));
+}
+
+.text-\[\#a89e3c\] {
+  --tw-text-opacity: 1;
+  color: rgb(168 158 60 / var(--tw-text-opacity));
 }
 
 .text-\[\#dad8d8\] {
@@ -1687,16 +1671,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#4da342\] {
-  --tw-text-opacity: 1;
-  color: rgb(77 163 66 / var(--tw-text-opacity));
-}
-
-.text-\[\#a89e3c\] {
-  --tw-text-opacity: 1;
-  color: rgb(168 158 60 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
