--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,7 +1,8 @@
 .App {
   display: flex;
   color: #9b9ba4;
-  background-color: #222131;
+  /* background-color: #222131; */
+  background-color: #020131;
   flex-direction: row;
   background-size: contain;
   background-size: 80%;
