--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -7,6 +7,7 @@
   background-size: contain;
   background-size: 80%;
   background-position: center left 250px;
+  font-family: "Poppins", sans-serif;
 }
 
 .Appimg {
@@ -32,8 +33,8 @@
   color: aliceblue;
 }
 .socialButtons:hover {
-  background-color: #f0d5d5; 
-  color: #323149; 
+  background-color: #f0d5d5;
+  color: #323149;
 }
 
 .card {
