--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -689,6 +689,11 @@ video {
   margin-right: 1rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
