--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -786,6 +786,18 @@ video {
   margin-top: 1.75rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -1431,6 +1443,11 @@ video {
   background-color: rgb(7 161 248 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#188ffd\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 143 253 / var(--tw-bg-opacity));
+}
+
 .fill-none {
   fill: none;
 }
@@ -1910,6 +1927,11 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#1263af\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 99 175 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#3570bd\]:hover {
