--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1202,6 +1202,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .text-ellipsis {
   text-overflow: ellipsis;
 }
