--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -2,7 +2,7 @@
   display: flex;
   color: #9b9ba4;
   /* background-color: #222131; */
-  background-color: #020131;
+  background-color: #39394b;
   flex-direction: row;
   background-size: contain;
   background-size: 80%;
